test-matrix: Fix tedious layout issues
* The location of the log popup when clicking on a test run doesn't
  account for the position of the title header (due to adding the header
  at the last minute), putting it in the wrong location.

* The border of a selected cell makes the row 2 pixels taller, causing
  everything to shift slightly when you click on the cell.

--- a/ci-tools/test-matrix/src/html/style.css
+++ b/ci-tools/test-matrix/src/html/style.css
@@ -52,7 +52,8 @@ table.caliptra-test-matrix td.na {
     background-color: #e0e0e0;
 }
 table.caliptra-test-matrix td.selected {
-    border: solid black 1px;
+    outline: 2px solid black;
+    outline-offset: -2px;
 }
 
 pre {
